tests/pass/molda_dipoz.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn envelhece(Pessoa pessoa) nter {
    divolvi pessoa.idadi + 1;
}

fn inisiu() {
    dipoz Pessoa pessoa;
    pessoa = Pessoa::{nomi: 'jose', idadi: 60};
    mostra(pessoa.nomi);
    mostra(" ");
    mostran(envelhece(pessoa));
}
