tests/fail/fail_molda_dipoz_use_before_init.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    dipoz Pessoa pessoa;
    mostran(pessoa.nomi);
}
